# cool-ai-harness

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_agent_runs_and_run_events.py  0003_approval_audits_and_capability_policy.py  0004_artifacts.py  0005_budgets_and_spend.py
backend/app/: main.py
backend/app/agent/: __init__.py  approvals.py  default_system_prompt.txt  events.py  executor.py  permissions.py  runners.py  runs.py  service.py
backend/app/api/: __init__.py  artifacts.py  budgets.py  conversations.py  providers.py  routes.py  runs.py  schemas.py  websocket.py  workspace.py
backend/app/artifacts/: __init__.py
backend/app/budgets/: __init__.py  service.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  approval.py  artifact.py  base.py  budget.py  conversation.py  provider.py  run.py  user.py
backend/app/providers/: __init__.py  anthropic.py  base.py  openai.py  pricing.py  registry.py  resilience.py
backend/app/security/: __init__.py  cost.py  (+5 more)
backend/evals/: __init__.py  __main__.py  gate.py  replay.py  runner.py  scenario.py
backend/tests/: conftest.py  test_agent.py  test_anthropic_provider.py  test_approval_audit.py  test_approval_delivery.py  test_artifacts.py  test_breakpoints.py  test_budgets.py  test_capabilities.py  test_conversation_streaming.py  test_conversations_api.py  test_evals.py  test_health.py  test_permissions.py  test_pricing.py  test_provider_models.py  test_providers_api.py  test_resilience.py  test_runs.py  test_sandbox.py  test_secret_masking.py  test_ssrf.py  test_tool_logging.py  test_tools.py  test_websocket.py
(+68 files in other folders)
