[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cool-ai-harness"
version = "0.1.0"
description = "AI agent harness with provider abstraction, tools, skills, MCP, subagents, memory, personalities, observability, and recurring tasks."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Danil Kondratiuk" }]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Database
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    # HTTP client (LLM SDK base)
    "httpx>=0.27",
    # Scheduler (cron jobs — Фаза 3b)
    "apscheduler>=3.10",
    "croniter>=3.0",
    # Telegram
    "python-telegram-bot>=21.6",
    # Crypto (encrypting API keys at rest)
    "cryptography>=43",
    # Structured logging
    "structlog>=24.4",
    # Web utilities
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27", # for TestClient
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
